--- a/3DDesktop-war/web/index.html
+++ b/3DDesktop-war/web/index.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>3d-desktop</title>
-    <script src="scripts/three.min.js" charset="utf-8"></script>
-    <script src="scripts/jquery-3.1.1.min.js" charset="utf-8"></script>
-    <script>
-    </script>
-  </head>
-  <body>
-  </body>
+<head>
+	<title>Three.js - 3D desktop</title>
+	<meta charset="utf-8">
+	<style>
+		body {
+			margin: 0;
+			padding: 0;
+			overflow: hidden;
+		}
+	</style>
+
+	<!-- libs -->
+	<script type="text/javascript" src="scripts/Three.js"></script>
+	<script type="text/javascript" src="scripts/RequestAnimationFrame.js"></script>
+	<script type="text/javascript" src="scripts/jquery.js"></script>
+
+
+	<!-- app -->
+	<script type="text/javascript" src="scripts/3ddesktop.js"></script>
+
+
+</head>
+<body>
+<div></div>
+</body>
 </html>
