Revert "returned front-end to initial state"
This reverts commit c057776df0430198233385f1a3012cbadba3ce1f.

--- a/3DDesktop-war/web/index.html
+++ b/3DDesktop-war/web/index.html
@@ -12,13 +12,13 @@
 	</style>
 
 	<!-- libs -->
-	<script type="text/javascript" src="js/Three.js"></script>
-	<script type="text/javascript" src="js/RequestAnimationFrame.js"></script>
-	<script type="text/javascript" src="js/jquery.js"></script>
+	<script type="text/javascript" src="scripts/Three.js"></script>
+	<script type="text/javascript" src="scripts/RequestAnimationFrame.js"></script>
+	<script type="text/javascript" src="scripts/jquery.js"></script>
 
 
 	<!-- app -->
-	<script type="text/javascript" src="js/3ddesktop.js"></script>
+	<script type="text/javascript" src="scripts/3ddesktop.js"></script>
 
 
 </head>
